--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -18,7 +18,6 @@ url_style single
 
 # Mouse
 focus_follows_mouse yes
-pointer_shape_when_grabbed beam
 
 # Performance
 repaint_delay 20
@@ -37,7 +36,8 @@ tab_bar_edge bottom
 tab_bar_style separator
 tab_bar_margin_width 0.0
 tab_separator " "
-active_tab_title_template " {title} "
+tab_title_template " {title} "
+active_tab_title_template "█ {title} █"
 active_tab_font_style bold
 inactive_tab_font_style normal
 
@@ -95,3 +95,6 @@ map ctrl+shift+equal increase_font_size
 map ctrl+shift+minus decrease_font_size
 map ctrl+shift+backspace restore_font_size
 map ctrl+shift+f6 set_font_size 16.0
+
+# Allow reading clipboard "klip"
+clipboard_control write-clipboard write-primary
