--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,8 @@
 # Colors
 include colors.conf
+# High contrast theme override for transparent windows
+background #000000
+foreground #ffffff
 
 # Fonts
 font_family Fira Code
@@ -37,7 +40,7 @@ tab_bar_style separator
 tab_bar_margin_width 0.0
 tab_separator " "
 tab_title_template " {title} "
-active_tab_title_template "█ {title} █"
+active_tab_title_template " {title} "
 active_tab_font_style bold
 inactive_tab_font_style normal
 
