--- a/.gitmodules
+++ b/.gitmodules
@@ -5,19 +5,16 @@
 	path = ohmyzsh
 	url = https://github.com/ohmyzsh/ohmyzsh.git
 [submodule "vim/pack/targets.vim"]
-	path = vim/pack/xieve/start/targets.vim
+	path = vim/pack/plugins/start/targets.vim
 	url = https://github.com/wellle/targets.vim
 [submodule "vim/pack/vim-fugitive"]
-	path = vim/pack/xieve/start/vim-fugitive
+	path = vim/pack/plugins/start/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive
 [submodule "vim/pack/vim-airline"]
-	path = vim/pack/xieve/start/vim-airline
+	path = vim/pack/plugins/start/vim-airline
 	url = https://github.com/vim-airline/vim-airline
-[submodule "vim/pack/vim-airline-themes"]
-	path = vim/pack/xieve/start/vim-airline-themes
-	url = https://github.com/vim-airline/vim-airline-themes
 [submodule "vim/pack/tmuxline.vim"]
-	path = vim/pack/xieve/start/tmuxline.vim
+	path = vim/pack/plugins/start/tmuxline.vim
 	url = https://github.com/edkolev/tmuxline.vim
 [submodule "zsh/plugins/zsh-autosuggestions"]
 	path = zsh/plugins/zsh-autosuggestions
@@ -31,3 +28,6 @@
 [submodule "zsh/plugins/zsh-vim-mode"]
 	path = zsh/plugins/zsh-vim-mode
 	url = https://github.com/softmoth/zsh-vim-mode
+[submodule "vim/pack/plugins/start/vim-toml"]
+	path = vim/pack/plugins/start/vim-toml
+	url = https://github.com/cespare/vim-toml.git
