--- a/kitty/colors.conf
+++ b/kitty/colors.conf
@@ -1,63 +1,35 @@
-background #000000
-foreground #F8F8F2
-cursor #F8F8F2
+# Base16 Material Vivid - kitty color config
+# Scheme by joshyrobot
+background #202124
+foreground #80868b
+selection_background #80868b
+selection_foreground #202124
+url_color #676c71
+cursor #80868b
+active_border_color #44464d
+inactive_border_color #27292c
+active_tab_background #80868b
+active_tab_foreground #27292c
+inactive_tab_background #27292c
+inactive_tab_foreground #676c71
+tab_bar_background #27292c
 
-# Black
-color0 #3D4C5F
-color8 #56687E
+# normal
+color0 #202124
+color1 #f44336
+color2 #00e676
+color3 #ffeb3b
+color4 #2196f3
+color5 #673ab7
+color6 #00bcd4
+color7 #80868b
 
-# Red
-color1 #EE4F84
-color9 #F48FB1
-
-# Green
-color2 #53E2AE
-color10 #A1EFD3
-
-# Yellow
-color3 #F1FF52
-color11 #F1FA8C
-
-# Blue
-color4 #6498EF
-color12 #92B6F4
-
-# Magenta
-color5 #985EFF
-color13 #BD99FF
-
-# Cyan
-color6 #24D1E7
-color14 #87DFEB
-
-# White
-color7 #E5E5E5
-color15 #F8F8F2
-
-
-
-# The foreground for selections
-selection_foreground #F8F8F2
-
-# The background for selections
-selection_background #8ab4f2
-
-# Emacs terminal background
-color17 #323F4E
-
-# Emacs terminal modeline
-color23 #1a1a1a
-
-# The color for the border of the active window
-active_border_color #F1FA8C
-
-# The color for the border of inactive windows
-inactive_border_color #56687E
-
-url_color #6498EF
-
-inactive_tab_foreground #F8F8F2
-inactive_tab_background #1A1A1A
-active_tab_foreground #1A1A1A
-active_tab_background #92B6F4
-tab_bar_background #1A1A1B
+# bright
+color8 #44464d
+color9 #ff9800
+color10 #27292c
+color11 #323639
+color12 #676c71
+color13 #9e9e9e
+color14 #8d6e63
+color15 #ffffff
