--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 set -g default-terminal "screen-256color"
 set -g mouse on
 set -g history-limit 30000
-source-file .dotfiles/tmuxline.theme
+source-file $HOME/.dotfiles/tmuxline.theme
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
