zsh-history-substring-search

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "vim/pack/plugins/start/vim-toml"]
 	path = vim/pack/plugins/start/vim-toml
 	url = https://github.com/cespare/vim-toml.git
+[submodule "zsh/plugins/zsh-history-substring-search"]
+	path = zsh/plugins/zsh-history-substring-search
+	url = https://github.com/zsh-users/zsh-history-substring-search.git
