--- a/flavours.toml
+++ b/flavours.toml
@@ -47,3 +47,11 @@ file = "~/.dotfiles/jetbrains/options/flavours.scheme.xml"
 template = "jetbrains"
 subtemplate = "scheme"
 rewrite = true
+
+# Termux
+[[item]]
+file = "~/.dotfiles/termux-colors.properties"
+template = "termux"
+rewrite = true
+hook = "command -v termux-reload-settings &> /dev/null && termux-reload-settings"
+
