--- a/termux-colors.properties
+++ b/termux-colors.properties
@@ -1,3 +1,4 @@
+# Start flavours
 # Base16 Material Vivid - Termux color config
 # Scheme by joshyrobot
 
@@ -24,3 +25,7 @@ color12=#676c71
 color13=#9e9e9e
 color14=#8d6e63
 color15=#ffffff
+# End flavours
+
+background=#000000
+foreground=#ffffff
