--- a/flavours.toml
+++ b/flavours.toml
@@ -1,5 +1,4 @@
-# Commands go through zsh
-shell = "zsh -c '{}'"
+# Commands go through zsh shell = "zsh -c '{}'"
 
 # Kitty
 [[item]]
@@ -16,6 +15,12 @@ s/^\\(tab_bar_background \\).*/\\1$inactive_tab_background/" ~/.dotfiles/kitty/c
 '''
 
 # Vim & Tmux
+[[item]]
+file = "~/.dotfiles/vim/colors/flavours.vim"
+template = "vim"
+rewrite = true
+# Replaces the dynamic theme name with "flavours"
+hook = "sed -i \"s/^let g:colors_name = \\\".*\\\"$/let g:colors_name = \\\"flavours\\\"/\" ~/.dotfiles/vim/colors/flavours.vim"
 [[item]]
 file = "~/.dotfiles/vim/autoload/airline/themes/flavours.vim"
 template = "vim-airline-themes"
@@ -53,4 +58,3 @@ rewrite = true
 file = "~/.dotfiles/termux-colors.properties"
 template = "termux"
 hook = "command -v termux-reload-settings &> /dev/null && termux-reload-settings"
-
