--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,15 @@
 [submodule "vim/pack/plugins/opt/suda.vim"]
 	path = vim/pack/plugins/opt/suda.vim
 	url = https://github.com/lambdalisue/suda.vim
+[submodule "vim/pack/plugins/opt/sleuth"]
+	path = vim/pack/plugins/opt/sleuth
+	url = https://tpope.io/vim/sleuth.git
+[submodule "vim/pack/plugins/opt/vim-textobj-entire"]
+	path = vim/pack/plugins/opt/vim-textobj-entire
+	url = https://github.com/kana/vim-textobj-entire.git
+[submodule "vim/pack/plugins/opt/vim-textobj-user"]
+	path = vim/pack/plugins/opt/vim-textobj-user
+	url = https://github.com/kana/vim-textobj-user.git
+[submodule "vim/pack/plugins/start/editorconfig-vim"]
+	path = vim/pack/plugins/start/editorconfig-vim
+	url = https://github.com/editorconfig/editorconfig-vim.git
