--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -11,7 +11,7 @@ bold_font auto
 bold_italic_font auto
 font_size 10.5
 
-symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00D,U+E0A3,U+E0C0-U+E0C8,U+E0CA,U+E0CC-U+E0D2,U+E0D4,U+E200-U+E2A9,U+E300-U+E3EB,U+E5FA-U+E62B,U+E700-U+E7C5,U+F000-U+F2E0,U+F27C,U+F300-U+F313,U+F400-U+F4A8,U+F500-U+FD46  Symbols Nerd Font
+symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00D,U+E0A3,U+E0C0-U+E0C8,U+E0CA,U+E0CC-U+E0D2,U+E0D4,U+E200-U+E2A9,U+E300-U+E3EB,U+E5FA-U+E62B,U+E700-U+E7C5,U+F000-U+F2E0,U+F27C,U+F300-U+F313,U+F400-U+F4A8,U+F500-U+FD46  FiraCode Nerd Font
 
 # Cursor
 cursor_shape underline
