--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -22,6 +22,7 @@
     ~/.config/burn-my-windows/profiles: burn-my-windows
     ~/.config/nvim/init.vim: init.vim
     ~/.config/wezterm: wezterm
+    ~/.ssh/config: ssh.config
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
