feat(dotbot): add ideavimrc

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,6 +7,7 @@
     ~/.tmux.conf:
     ~/.tmuxline.theme:
     ~/.vimrc:
+    ~/.ideavimrc:
     ~/.zshrc:
     ~/.vim:
     ~/.config/flavours: flavours
