feat(nvim): switch to lua and create nvim folder

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -17,7 +17,7 @@
       create: false
       path: termux-colors.properties
     ~/.config/burn-my-windows/profiles: burn-my-windows
-    ~/.config/nvim/init.vim: init.vim
+    ~/.config/nvim:
     ~/.config/wezterm: wezterm
     ~/.config/pop-shell/config.json: pop-shell.json
     ~/.config/Kvantum/KvLibadwaita: KvLibadwaita/src/KvLibadwaita
