--- a/termux-colors.properties
+++ b/termux-colors.properties
@@ -1,29 +1,29 @@
 # Start flavours
-# Base16 Material Vivid - Termux color config
-# Scheme by joshyrobot
+# Base16 kgx-adjusted - Termux color config
+# Scheme by xieve
 
-background=#202124
-foreground=#80868b
-cursor=#80868b
+background=#1e1e1e
+foreground=#cfcfcf
+cursor=#cfcfcf
 
 # normal
-color0=#202124
-color1=#f44336
-color2=#00e676
-color3=#ffeb3b
-color4=#2196f3
-color5=#673ab7
-color6=#00bcd4
-color7=#80868b
+color0=#1e1e1e
+color1=#c01c28
+color2=#2ec27e
+color3=#f5c211
+color4=#1e78e4
+color5=#9841bb
+color6=#0ab9dc
+color7=#cfcfcf
 
 # bright
 color8=#44464d
-color9=#ff9800
+color9=#ed333b
 color10=#27292c
 color11=#323639
 color12=#676c71
 color13=#9e9e9e
-color14=#8d6e63
+color14=#4fd2fd
 color15=#ffffff
 # End flavours
 
