--- a/wezterm/colors/flavours.toml
+++ b/wezterm/colors/flavours.toml
@@ -1,33 +1,33 @@
-# Base16 Material Vivid - wezterm color config
-# Scheme by joshyrobot
+# Base16 kgx-adjusted - wezterm color config
+# Scheme by xieve
 
 [colors]
-foreground    = "#80868b"
-background    = "#202124"
-cursor_bg     = "#80868b"
-cursor_border = "#80868b"
-cursor_fg     = "#202124"
-selection_bg  = "#80868b"
-selection_fg  = "#202124"
+foreground    = "#cfcfcf"
+background    = "#1e1e1e"
+cursor_bg     = "#cfcfcf"
+cursor_border = "#cfcfcf"
+cursor_fg     = "#1e1e1e"
+selection_bg  = "#cfcfcf"
+selection_fg  = "#1e1e1e"
 
 ansi = [
-  "#202124",
-  "#f44336",
-  "#00e676",
-  "#ffeb3b",
-  "#2196f3",
-  "#673ab7",
-  "#00bcd4",
-  "#80868b"
+  "#1e1e1e",
+  "#c01c28",
+  "#2ec27e",
+  "#f5c211",
+  "#1e78e4",
+  "#9841bb",
+  "#0ab9dc",
+  "#cfcfcf"
 ]
 
 brights = [
   "#44464d",
-  "#ff9800",
+  "#ed333b",
   "#27292c",
   "#323639",
   "#676c71",
   "#9e9e9e",
-  "#8d6e63",
+  "#4fd2fd",
   "#ffffff"
 ]
